--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "commitizen": "^4.2.4",
-    "cz-customizable": "6.3.0"
+    "cz-customizable": "6.3.0",
+    "husky": "^7.0.4"
   },
   "config": {
     "commitizen": {
@@ -9,6 +10,11 @@
     },
     "cz-customizable": {
       "config": "./commitizen.config.js"
+    }
+  },
+  "husky" : {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   }
 }
