--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
       "config": "./commitizen.config.js"
     }
   },
-  "husky" : {
+  "husky": {
     "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g './commitlint.js"
     }
+  },
+  "dependencies": {
+    "@commitlint/cli": "^15.0.0"
   }
 }
