--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
       "path": "./node_modules/cz-customizable"
     },
     "cz-customizable": {
-      "config": "./commitizen.config.js"
+      "config": "./config/git/commitizen.config.js"
     }
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g './commitlint.js'"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g './config/git/commitlint.config.js'"
     }
   }
 }
