--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -g './config/git/commitlint.config.js' --print-config"
+      "commit-msg": "commitlint -g './config/git/commitlint.config.js'"
     }
   },
   "scripts": {
