feat(component): aa
aaa

BREAKING CHANGE:
aaaa

Meta info: Lk-111

--- a/package.json
+++ b/package.json
@@ -13,13 +13,8 @@
       "config": "./config/git/commitizen.config.js"
     }
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "yarn run commit-lint"
-    }
-  },
   "scripts": {
-    "commit-lint": "commitlint -g './config/git/commitlint.config.js'",
+    "commit-lint": "commitlint --edit --config='./config/git/commitlint.config.js'",
     "prepare": "husky install"
   }
 }
