--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
     "commitizen": "^4.2.4",
+    "conventional-changelog-cli": "^2.1.1",
     "cz-customizable": "6.3.0",
-    "husky": "^7.0.4",
-    "@commitlint/cli": "^15.0.0"
+    "husky": "^7.0.4"
   },
   "config": {
     "commitizen": {
