refactor(config): update .versionrc
Meta info: LK-667788

--- a/.versionrc
+++ b/.versionrc
@@ -1,9 +1,8 @@
 {
   "types": [
-    {"type": "feat", "section": 'Features'},
-    {"type": "fix", "section": 'Bug Fixes'},
-    {"type": "refactor", "section": 'Refactoring', "hidden": true},
-    {"type": "fix", "section": 'Bug Fixes'},
+    {"type": "feat", "section": "Features"},
+    {"type": "fix", "section": "Bug Fixes"},
+    {"type": "refactor", "section": "Refactoring", "hidden": false}
   ],
   "releaseCommitMessageFormat": 'release(global): {{currentTag}}'
 }
