chore(global): update versionrc
Meta info: LK-443322

--- a/.versionrc
+++ b/.versionrc
@@ -1,8 +1,9 @@
 {
+  "header": '',
   "types": [
     {"type": "feat", "section": "Features"},
     {"type": "fix", "section": "Bug Fixes"},
     {"type": "refactor", "section": "Refactoring", "hidden": false}
   ],
-  "releaseCommitMessageFormat": 'release(global): {{currentTag}}'
+  "releaseCommitMessageFormat": "release(global): {{currentTag}}"
 }
