--- a/.versionrc
+++ b/.versionrc
@@ -1,5 +1,5 @@
 {
-  "header": '',
+  "header": "# Changelog",
   "types": [
     {"type": "feat", "section": "Features"},
     {"type": "fix", "section": "Bug Fixes"},
