--- a/.versionrc
+++ b/.versionrc
@@ -3,7 +3,8 @@
   "types": [
     {"type": "feat", "section": "Features"},
     {"type": "fix", "section": "Bug Fixes"},
-    {"type": "refactor", "section": "Refactoring", "hidden": false}
+    {"type": "refactor", "section": "Refactoring", "hidden": false},
+    {"type": "chore", "section": "Chore", "hidden": false}
   ],
   "releaseCommitMessageFormat": "release(global): {{currentTag}}"
 }
